HtmlUI: - fixed layout bugs

--- a/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/form/fields/stringfield/StringField.css
+++ b/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/form/fields/stringfield/StringField.css
@@ -4,6 +4,10 @@
   }
 
   & textarea {
-    width:100%;
+    /* these two properties are required for FF, otherwise the editable textarea is 2px too large,
+     * and the DOM inspector does not include these 2 pixels.
+     */
+    padding:0;
+    margin:0 auto;
   }
 }
